# a

./: .gitignore  .installed  CMakeLists.txt  Dockerfile  README.md  allocator.cpp  allocator.hpp  allocator_utils.hpp  install_env.sh  install_lib.sh  main.cpp  new_lib.sh  prepare.sh  test.cpp  try.cpp
.github/workflows/: main.yml
dependencies/: CMakeLists.txt  Dockerfile  README.md  allocator.cpp  install_env.sh  prepare.sh  test.cpp
